--- a/css/jquery.overlayGallery.css
+++ b/css/jquery.overlayGallery.css
@@ -1,144 +1,156 @@
-.og- {
-	position: relative;
-	overflow: hidden;
-}
+@media screen {
+	.og- {
+		position: relative;
+		overflow: hidden;
+		border: solid 1px #333;
+	}
+	
+	#og-slides {
+		position: relative;
+		z-index: 1;
+	}
+	
+	#og-slides img {
+		border: 0;
+		opacity: 0;
+		filter: alpha(opacity = 0);
+		position: absolute;
+		top: 0px;
+		left: 0px;
+		z-index: 1;
+	}
+	
+	#og-slides .current img {
+		z-index: 2;
+	}
+	
+	#og-controls {
+		border-top: solid 1px #333;
+		background: #ccc;
+		background-image: -webkit-gradient(
+    linear,
+    left bottom,
+    left top,
+    color-stop(0.49, rgb(224,224,224)),
+    color-stop(0.91, rgb(204,204,204))
+);
+background-image: -moz-linear-gradient(
+    center bottom,
+    rgb(224,224,224) 49%,
+    rgb(204,204,204) 91%
+);
 
-#og-slides {
-	position: relative;
-	z-index: 1;
-}
+		height: 30px;
+		width: 100%;
+		position: absolute;
+		bottom: 0px;
+		z-index: 3;
+	}
+	
+	.og-sprites {
+		background-image: url("/Assets/Inventory/images/gallerySprites.png");
+		background-repeat: no-repeat;
+		position: absolute;
+		bottom: 5px;
+		height: 20px;
+		cursor: pointer;
+	}
+	
+	.og-play {
+		background-position: -40px 0;
+		width: 15px;
+		left: 10px;
+	}
+	
+	.og-pause {
+		background-position: -20px 0;
+		width: 15px;
+		left: 10px;
+	}
+	
+	.og-previous {
+		background-position: -70px 0;
+		width: 18px;
+		right: 56px;
+	}
+	
+	.og-next {
+		background-position: -55px 0;
+		width: 18px;
+		right: 5px;
+	}
+	
+	.og-toggle-thumbs {
+		background-position: 0 0;
+		width: 18px;
+		right: 30px;
+		height: 18px;
+	}
+	
+	#og-thumbs-overlay {
+		background: #000;
+		opacity: 0.5;
+		filter: alpha(opacity=50);
+		position: absolute;
+		z-index: 2;
+	}
+	
+	#og-thumbs {
+		position: absolute;
+		z-index: 3;
+	}
+	
+	#og-thumbs img {
+		margin-left: 5px;
+		margin-right: 5px;
+		margin-top: 10px;
+		opacity: 0.9;
+		filter: alpha(opacity=90);
+		cursor: pointer;
+		height: 75px;
+	}
+	
+	#og-thumbs img:hover, #og-thumbs img.current {
+		opacity: 1;
+		filter: alpha(opacity=100);
+	}
+	
+	.og-xofy {
+	    color: #FFFFFF;
+	    font-family: arial;
+	    font-size: 12px;
+	    position: absolute;
+	    right: 89px;
+	    text-align: right;
+	    top: 8px;
+	}
+	
+	.og-slides-container {
+		float: left;
+		position: relative;
+		text-align: center;
+	}
+	
+	.hidden {
+		display: none;
+	}
+	
+	.og-zoom-mask {
+	    background-image: url("/Assets/Inventory/images/gallerySprites.png");
+	    background-position: -94px 0;
+	    background-repeat: no-repeat;
+	    bottom: 50px;
+	    height: 74px;
+	    position: absolute;
+	    right: 10px;
+	    width: 76px;
+	    z-index: 6;
+	}
+	
+	#og-print-image {
+		display: none;
+	}
 
-#og-slides img {
-	border: 0;
-	opacity: 0;
-	filter: alpha(opacity = 0);
-	position: absolute;
-	top: 0px;
-	left: 0px;
-}
-
-#og-controls {
-	background: #000;
-	background-image: -webkit-gradient(
-	    linear,
-	    left bottom,
-	    left top,
-	    color-stop(0.5, rgb(36,36,36)),
-	    color-stop(0.5, rgb(54,54,54))
-	);
-	background-image: -moz-linear-gradient(
-	    center bottom,
-	    rgb(36,36,36) 50%,
-	    rgb(54,54,54) 50%
-	);
-	height: 30px;
-	width: 100%;
-	position: absolute;
-	bottom: 0px;
-	z-index: 3;
-}
-
-.og-sprites {
-	background-image: url("../img/gallerySprites.png");
-	background-repeat: no-repeat;
-	position: absolute;
-	bottom: 5px;
-	height: 20px;
-	cursor: pointer;
-}
-
-.og-play {
-	background-position: -40px 0;
-	width: 15px;
-	left: 10px;
-}
-
-.og-pause {
-	background-position: -20px 0;
-	width: 15px;
-	left: 10px;
-}
-
-.og-previous {
-	background-position: -70px 0;
-	width: 18px;
-	right: 56px;
-}
-
-.og-next {
-	background-position: -55px 0;
-	width: 18px;
-	right: 5px;
-}
-
-.og-toggle-thumbs {
-	background-position: 0 0;
-	width: 18px;
-	right: 30px;
-	height: 18px;
-}
-
-#og-thumbs-overlay {
-	background: #000;
-	opacity: 0.5;
-	filter: alpha(opacity=50);
-	position: absolute;
-	z-index: 2;
-}
-
-#og-thumbs {
-	position: absolute;
-	z-index: 3;
-}
-
-#og-thumbs img {
-	margin-left: 13;
-	margin-right: 13;
-	margin-top: 25px;
-	opacity: 0.9;
-	filter: alpha(opacity=90);
-	cursor: pointer;
-}
-
-#og-thumbs img:hover, #og-thumbs img.current {
-	opacity: 1;
-	filter: alpha(opacity=100);
-}
-
-.og-xofy {
-    color: #FFFFFF;
-    font-family: arial;
-    font-size: 12px;
-    position: absolute;
-    right: 89px;
-    text-align: right;
-    top: 8px;
-}
-
-.og-slides-container {
-	float: left;
-	position: relative;
-	text-align: center;
-}
-
-.hidden {
-	display: none;
-}
-
-.og-zoom-mask {
-    background-image: url("../img/gallerySprites.png");
-    background-position: -94px 0;
-    background-repeat: no-repeat;
-    bottom: 50px;
-    height: 74px;
-    position: absolute;
-    right: 10px;
-    width: 76px;
-    z-index: 6;
-}
-
-#og-print-image {
-	display: none;
 }
 
 @media print {
